// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ListBoxSelection should render 1`] = `
<ListBoxSelection
  clearSelection={[MockFunction]}
  translateWithId={
    [MockFunction] {
      "calls": Array [
        Array [
          "clear.selection",
        ],
        Array [
          "clear.all",
        ],
      ],
    }
  }
>
  <div
    className="bx--list-box__selection"
    onClick={[Function]}
    onKeyDown={[Function]}
    role="button"
    tabIndex="0"
    title="translation"
  >
    <Icon
      description="translation"
      fillRule="evenodd"
      name="close"
      role="img"
    >
      <svg
        aria-label="translation"
        fillRule="evenodd"
        height="10"
        name="close"
        role="img"
        viewBox="0 0 10 10"
        width="10"
      >
        <title>
          translation
        </title>
        <path
          d="M9.8 8.6L8.4 10 5 6.4 1.4 10 0 8.6 3.6 5 .1 1.4 1.5 0 5 3.6 8.6 0 10 1.4 6.4 5z"
          key="key0"
        />
      </svg>
    </Icon>
  </div>
</ListBoxSelection>
`;

exports[`ListBoxSelection should render 2`] = `
<ListBoxSelection
  clearSelection={[MockFunction]}
  selectionCount={3}
  translateWithId={
    [MockFunction] {
      "calls": Array [
        Array [
          "clear.selection",
        ],
        Array [
          "clear.all",
        ],
      ],
    }
  }
>
  <div
    className="bx--list-box__selection bx--list-box__selection--multi"
    onClick={[Function]}
    onKeyDown={[Function]}
    role="button"
    tabIndex="0"
    title="translation"
  >
    3
    <Icon
      description="translation"
      fillRule="evenodd"
      name="close"
      role="img"
    >
      <svg
        aria-label="translation"
        fillRule="evenodd"
        height="10"
        name="close"
        role="img"
        viewBox="0 0 10 10"
        width="10"
      >
        <title>
          translation
        </title>
        <path
          d="M9.8 8.6L8.4 10 5 6.4 1.4 10 0 8.6 3.6 5 .1 1.4 1.5 0 5 3.6 8.6 0 10 1.4 6.4 5z"
          key="key0"
        />
      </svg>
    </Icon>
  </div>
</ListBoxSelection>
`;
